# miniRT

./: 1.rt  2.rt  CMakeLists.txt  Makefile  hit.c  init.c  key.c  lighting.c  list.c  main.c  object.c  ray.c  scene.c  vector.c
includes/: hit.h  key_map.h  minirt.h  object.h  parse.h  ray.h  scene.h  setting.h  structures.h  util.h  vector.h
includes_bonus/: hit_bonus.h  key_map_bonus.h  minirt_bonus.h  parse_bonus.h  ray_bonus.h  setting_bonus.h  structures_bonus.h  vector_bonus.h
libft/: ft_error.c
mlx/: interface.swift  mlx.h.gch  mlx_image.swiftmodule  mlx_image.swiftsourceinfo  mlx_init.swiftdoc  mlx_init.swiftsourceinfo  mlx_new_window.m  mlx_opengl.h  mlx_png.c  mlx_window.swiftsourceinfo  mlx_xpm.c
mlx_mms/: libmlx.dylib  mlx.h  mlx_image.swiftdoc  mlx_image.swiftsourceinfo  mlx_init.swiftmodule  mlx_init.swiftsourceinfo  mlx_png.c  mlx_window.swiftdoc  mlx_window.swiftmodule  mlx_window.swiftsourceinfo  mlx_xpm.c
src/: hit.c  hit_cylinder.c  hit_sphere_plane.c  key.c  key_move.c  key_move_util.c  key_rotate.c  key_rotate_util.c  key_util.c  lighting.c  main.c  parse_major_object.c  ray.c  setting.c  util.c  vector.c  vector1.c  vector2.c  vector3.c
src_bonus/: hit_bonus.c  hit_cylinder_bonus.c  hit_sphere_plane_bonus.c  key_bonus.c  key_move_bonus.c  key_move_util_bonus.c  key_rotate_bonus.c  key_rotate_util_bonus.c  lighting_bonus.c  main_bonus.c  parse_file_bonus.c  parse_major_object_bonus.c  parse_minor_object_bonus.c  parse_util_bonus.c  ray_bonus.c  setting_bonus.c  vector1_bonus.c  vector2_bonus.c  vector3_bonus.c
