cmake_minimum_required(VERSION 3.23)
project(miniRT C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "-lmlx -L../mlx_mms")
include_directories(includes)
include_directories(includes_bonus)

add_executable(miniRT
        src/main.c
        src/vector1.c
        src/vector2.c
        src/vector3.c
        src/ray.c
        src/hit.c
        src/hit_sphere_plane.c
        src/hit_cylinder.c
        src/setting.c
        src/lighting.c
        src/parse_file.c
        src/parse_major_object.c
        src/parse_minor_object.c
        src/parse_util.c
        src/key_move.c
        src/key_move_util.c
        src/key_rotate.c
        src/key_rotate_util.c
        src/key.c
        src_bonus/main_bonus.c
        src_bonus/vector1_bonus.c
        src_bonus/vector2_bonus.c
        src_bonus/vector3_bonus.c
        src_bonus/ray_bonus.c
        src_bonus/hit_bonus.c
        src_bonus/hit_sphere_plane_bonus.c
        src_bonus/hit_cylinder_bonus.c
        src_bonus/setting_bonus.c
        src_bonus/lighting_bonus.c
        src_bonus/parse_file_bonus.c
        src_bonus/parse_major_object_bonus.c
        src_bonus/parse_minor_object_bonus.c
        src_bonus/parse_util_bonus.c
        src_bonus/key_move_bonus.c
        src_bonus/key_move_util_bonus.c
        src_bonus/key_rotate_bonus.c
        src_bonus/key_rotate_util_bonus.c
        src_bonus/key_bonus.c
        libft/ft_isdigit.c
        libft/ft_isalnum.c
        libft/ft_isascii.c
        libft/ft_isprint.c
        libft/ft_toupper.c
        libft/ft_tolower.c
        libft/ft_strncmp.c
        libft/ft_strlen.c
        libft/ft_strlcpy.c
        libft/ft_strlcat.c
        libft/ft_strchr.c
        libft/ft_strrchr.c
        libft/ft_memset.c
        libft/ft_bzero.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_strnstr.c
        libft/ft_atoi.c
        libft/ft_calloc.c
        libft/ft_strdup.c
        libft/ft_substr.c
        libft/ft_strjoin.c
        libft/ft_strtrim.c
        libft/ft_split.c
        libft/ft_itoa.c
        libft/ft_error.c
        libft/ft_free_strs.c
        libft/ft_strslen.c
        libft/ft_strcmp.c
        libft/ft_strmapi.c
        libft/ft_striteri.c
        libft/ft_putchar_fd.c
        libft/ft_putstr_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_atod.c
        libft/ft_lstnew.c
        libft/ft_lstadd_front.c
        libft/ft_lstsize.c
        libft/ft_lstlast.c
        libft/ft_lstadd_back.c
        libft/ft_lstdelone.c
        libft/ft_lstclear.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        )